Passkey auth service

--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,10 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# Cloudflare Wrangler
+.wrangler/
+wrangler.toml.bak
+
+# Environment specific configuration files
+wrangler.toml.example
