--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,6 +5,8 @@ compatibility_date = "2024-01-01"
 routes = [
   { pattern = "authservice.sanjaysingh.net", custom_domain = true }
 ]
+workers_dev = false
+preview_urls = false
 
 [vars]
 RP_ID = "sanjaysingh.net"
